[package]
name = "livesport-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
fantoccini = { version = "0.21.0", features = ["rustls-tls"] }
serde = { version = "1.0.204", features = ["derive", "serde_derive"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread", "signal", "sync", "tokio-macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
