[package]
name = "livesport-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.30", features = ["derive"] }
fantoccini = { version = "0.21.4", features = ["rustls-tls"] }
serde = { version = "1.0.218", features = ["derive", "serde_derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "tokio-macros",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
